# MyGame

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  physics_test_result.json
.github/workflows/: ci.yml  release.yml
Docs/: Architecture.md  ArchitectureReview.md  CD_THINKING_MODEL.md  CI_DEBUG_PLAYBOOK.md  CI_TESTING_GUIDE.md  FutureVision_Scripting.md  GraphicsAndPhysicsExpert.skill.md  REPO_STRUCTURE.md  Rule.md  ToOptimize.md  Unreal_Chaos_Physics_Architecture.md  howtobuild.md  physicsdebug.md  todo.md
Game/: CMakeLists.txt
Game/assets/shaders/: metal.frag  metal.vert
Game/include/Components/: CubeRenderComponent.h  RotationComponent.h  Transform3DComponent.h  TransformComponent.h  VelocityComponent.h
Game/include/Core/: GameApp.h
Game/include/Systems/: CubeRenderSystem.h  CubeRotationSystem.h  MovementSystem.h  RotationSystem.h
Game/src/: main.cpp
Game/src/Core/: GameApp.cpp
Game/src/Systems/: CubeRenderSystem.cpp  CubeRotationSystem.cpp  MovementSystem.cpp  RotationSystem.cpp
Runtime/: CMakeLists.txt
Runtime/include/Common/: Handle.h
Runtime/include/Core/: Engine.h  GameLoop.h  Input.h  Time.h
Runtime/include/ECS/: Component.h  ComponentPool.h  Entity.h  EntityPool.h  EventBus.h  Registry.h  System.h  SystemPool.h  World.h
Runtime/include/Graphics/: Camera.h  DefaultPipeline.h  Material.h  Mesh.h  MeshManager.h  RenderPipeline.h  RenderState.h  Renderer.h  Shader.h  ShaderManager.h  SimplePipeline.h  Texture.h  TextureManager.h
Runtime/include/Physics/: BroadPhase.h  Collider.h  CollisionDetector.h  CollisionShape.h  Constraint.h  ContactManifold.h  ContactSolver.h  ContinuousCollision.h  Integrator.h  NarrowPhase.h  PhysicsMaterial.h  PhysicsSystem.h  PhysicsWorld.h  Raycast.h  RigidBody.h  World.h
Runtime/include/Platform/: PlatformUtils.h  Window.h
Runtime/include/Resource/: AssetDatabase.h  AssetMetadata.h  FileSystem.h  HotReloadWatcher.h  ImportPipeline.h  MaterialLoader.h  MeshLoader.h  Resource.h  ResourceCache.h  ResourceLoader.h  ResourceManager.h  ShaderLoader.h  TextureLoader.h
Runtime/src/Core/: Engine.cpp  GameLoop.cpp  Input.cpp  Time.cpp
Runtime/src/Graphics/: Camera.cpp  DefaultPipeline.cpp  Mesh.cpp  MeshManager.cpp  Renderer.cpp  Shader.cpp  ShaderManager.cpp  SimplePipeline.cpp  Texture.cpp  TextureManager.cpp
Runtime/src/Network/: Channel.cpp  ClientPredictor.cpp  Connection.cpp  Message.cpp  MessageDispatcher.cpp  MessageSerializer.cpp  NetworkManager.cpp  NetworkSystem.cpp  PacketBuffer.cpp  Session.cpp  Socket.cpp  StateSnapshot.cpp
Runtime/src/Physics/: BroadPhase.cpp  CollisionDetector.cpp  ContactSolver.cpp  ContinuousCollision.cpp  NarrowPhase.cpp  PhysicsWorld.cpp  RigidBody.cpp
Runtime/src/Platform/: Window.cpp
Runtime/src/Resource/: AssetDatabase.cpp  FileSystem.cpp  HotReloadWatcher.cpp  ImportPipeline.cpp  MaterialLoader.cpp  MeshLoader.cpp  Resource.cpp  ResourceCache.cpp  ResourceLoader.cpp  ResourceManager.cpp  ShaderLoader.cpp  TextureLoader.cpp
Runtime/src/UI/: Canvas.cpp  DataBinding.cpp  DebugUI.cpp  Layout.cpp  UIManager.cpp  UIRenderer.cpp  UIStyle.cpp  Widget.cpp
Runtime/src/UI/Widgets/: Button.cpp  Dialog.cpp  DropDown.cpp  Image.cpp  InputField.cpp  Label.cpp  ListView.cpp  Panel.cpp  ProgressBar.cpp  ScrollView.cpp  Slider.cpp  TabView.cpp  Toggle.cpp  TreeView.cpp
Shared/: CMakeLists.txt
Shared/include/Shared/Config/: BuildConfig.h
Shared/src/: BuildConfig.cpp
Tests/: CMakeLists.txt
Tests/ECS/: RuntimeECS_SmokeTest.cpp
Tests/Graphics/: Graphics_BasicTest.cpp
Tests/Physics/: Physics_BasicTest.cpp
Tests/Resource/: Resource_BasicTest.cpp
Tools/: CMakeLists.txt
